--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "lua",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceFolder}/main.lua"
+            "program": "${workspaceFolder}/entry.lua"
         }
     ]
 }
